# ecurl

./: .gitignore  LICENSE  Makefile  README.md  ecurl.go  go.mod
.github/workflows/: test.yml
cmd/: cli.go  cli_test.go  get.go  post.go
echoserver/: echoserver.go
ecurl/: buffered_scanner.go  buffered_scanner_test.go  chunked_reader.go  constants.go  content_length_reader.go  ecurl_test.go  gzip.go  gzip_test.go  headers.go  infinite_reader.go  lib.go  multipart_byteranges_reader.go  multipart_byteranges_reader_test.go  request.go  request_test.go  response.go  status_line.go
httpc/: .gitignore  Makefile  go.mod
httpc/cmd/: cli.go  get.go  help.go
httpc/echoserver/: echoserver.go
httpc/ecurl/: buffered_scanner.go  buffered_scanner_test.go  chunked_reader.go  ecurl_test.go  errors.go  lib.go  request.go  response.go
httpfs/: .gitignore  Cargo.toml  Makefile
httpfs/src/: bullshit_scanner.rs  errors.rs  html.rs  lib.rs  server.rs
httpfs/tests/: httpfs.rs  test_httpfs.rs  utils.rs
internal/mocks/: mock_net_conn.go
internal/testutils/: inlined_files.go  testutils.go
requirements/: README.md
resources/a2/: hello.html
resources/a3/: .gitignore
rust/: .gitignore  Cargo.toml  Makefile
rust/src/: errors.rs  html.rs  lib.rs  parse.rs  server.rs
rust/tests/: httpfs.rs  test_utils.rs
scratch/: scratch.go
udp/: .gitignore  Cargo.toml  Makefile  TODO.md  router.go  upload_me.txt
udp/src/: bullshit_scanner.rs  constants.rs  demo.sh  errors.rs  html.rs  lib.rs  logging.rs  packet.rs  parse.rs  server.rs  traits.rs  transport.rs  util.rs
(+8 files in other folders)
