[package]
default-run = "httpfs"
edition = "2021"
name = "httpfs"
version = "0.1.0"

[dependencies]
clap = {version = "3.1.6", features = ["derive", "wrap_help"]}
ctrlc = "3.2.1"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
mime = "0.3.16"
num_cpus = "1.13.1"
rand = "0.8.5"
stringreader = "0.1.1"
threadpool = "1.8.1"
ureq = "2.4.0"
